[project]
name = "sing-box-subscribe"
version = "1.0.0"
description = "sing-box subscription tool"
requires-python = ">=3.8,<3.12" 
dependencies = [
    "requests",
    "paramiko",
    "scp",
    "chardet",
    "PyYAML",
    "ruamel.yaml",
    "Flask==2.3.2",
]

[build-system]
requires = ["uv>=0.1"]
build-backend = "uv"
