[project]
name = "sing-box-subscribe"
version = "1.0.0"
description = "sing-box subscription tool"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "paramiko",
    "scp",
    "chardet",
    "PyYAML",
    "ruamel.yaml",
    "Flask==2.3.2",
]

[build-system]
requires = ["setuptools>=61.0"]  # 改回标准配置
build-backend = "setuptools.build_meta"
